<resources>
    <string name="app_name">Mobile App as2</string>
    <string name="title_edituser">Edit User</string>
    <string name="title_shop">Shop</string>
    <string name="title_user">User</string>
    <string name="title_basket">Basket</string>
    <string name="title_activity_main_menu">MainMenu</string>

    <!-- LOGIN SCREEN -->
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_Button">Login</string>
    <string name="register_Button">Register</string>
    <string name="username_incorrect_toast">Incorrect Username</string>
    <string name="password_incorrect_toast">Incorrect Password</string>
    <string name="welcome_toast">Welcome</string>
    <string name="app_title">Kwesi James Local Store</string>

    <!-- REGISTER SCREEN -->
    <string name="register_Title">Register</string>
    <string name="name_entry">Name</string>
    <string name="password_entry">Password</string>
    <string name="re_password_entry">Re-Enter Password</string>
    <string name="email_entry">Email</string>
    <string name="re_email_entry">Re-Enter Email</string>
    <string name="address_entry">Delivery Address</string>
    <string name="postcode_entry">Postcode</string>
    <string name="phonenumber_entry">Phone Number</string>
    <string name="hobby_entry">Hobby</string>
    <string name="register_button">Register</string>
    <string name="register_empty_toast">Make Sure To Fill All Entries</string>
    <string name="register_email_toast">Emails Do Not Match</string>
    <string name="register_password_toast">Passwords Do Not Match</string>
    <string name="register_succesful_toast">Registered Successfully</string>
    <string name="register_nameinuse">username Already In Use</string>
    <string name="register_validemail">Please Enter Valid Email</string>
    <string name="register_validpostcode">Please Enter a Valid Postcode</string>
    <string name="register_validphone">Please Enter Valid Phone Number</string>

    <!-- USER SHOP SCREEN -->
    <string name="shop_title">Shop</string>
    <string name="category_title">Cat_Title</string>
    <string name="category_description">example description of a category</string>
    <!-- recycler view items -->
    <string name="shoprecycler_price">Price</string>

    <!-- USER USER SCREEN -->
    <string name="username_text">Name</string>
    <string name="useremail_text">Email</string>
    <string name="oldorders_title">Old Orders</string>
    <!-- recycler view items -->
    <string name="pricetotal_text">Total: £</string>
    <string name="orderstatus_text">Status: </string>

    <!-- USER EDIT USER SCREEN -->
    <string name="update_userinfo_button">Update</string>
    <string name="cancel_userinfo_button">Cancel</string>
    <string name="oldpassword_entry">Old Password</string>
    <string name="edit_user_title">Edit User</string>

    <!-- BASKET SCREEN -->
    <string name="buycontents_button">Buy</string>
    <string name="removecontents_button">Remove All</string>
    <!-- recycler view items -->
    <string name="remove_item_button">-</string>


    <!-- ADMIN STRINGS -->
    <!-- ADMIN NAV BAR -->
    <string name="admin_navbar_1">PRODUCTS</string>
    <string name="admin_navbar_2">ORDERS</string>
    <string name="admin_navbar_3">USERS</string>
    <string name="admin_navbar_4">CATEGORIES</string>

    <!-- SHOP ITEMS -->
    <string name="admin_shop_title">Products</string>

    <!-- NEW ITEM -->
    <string name="admin_newitem_text">New Product</string>
    <string name="admin_new_cat_text">New</string>
    <string name="admin_description_hint">Description</string>
    <string name="admin_price_hint">Price</string>
    <string name="admin_category_hint">Category</string>
    <string name="admin_create_button">Create</string>

    <!-- UPDATE ITEM -->
    <string name="admin_updateitem_text">Update</string>
    <string name="admin_delete_button">Delete</string>

    <!-- VIEW ORDERS -->
    <string name="admin_order_title">Orders</string>
    <string name="admin_status1">Making Confirmed</string>
    <string name="admin_status2">Dispatched</string>
    <string name="admin_status3">Out For Delivery</string>
    <string name="admin_status4">Delivered</string>

    <!-- VIEW USERS -->
    <string name="admin_user_title">Users</string>

    <!-- EDIT USER -->
    <string name="admin_edituser_text">Edit User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_admin">AdminActivity</string>

    <!-- EDIT CATEGORY -->
    <string name="admin_category_title">Edit Category</string>
    <string name="admin_category_back">Back</string>

</resources>