<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <TextView
        android:id="@+id/admin_updateItemTitle_textView_user"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/admin_edituser_text"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/admin_productnameupdate_entry_user"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/name_entry"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_updateItemTitle_textView_user" />

    <EditText
        android:id="@+id/admin_productDescriptionUpdate_entry_user"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/password_entry"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_productnameupdate_entry_user" />

    <EditText
        android:id="@+id/registerEmail_editText_user"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/email_entry"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_productDescriptionUpdate_entry_user" />

    <EditText
        android:id="@+id/registerAddress_editText_user"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/address_entry"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerEmail_editText_user" />

    <EditText
        android:id="@+id/registerPostcode_editText_user"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/postcode_entry"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerAddress_editText_user" />

    <EditText
        android:id="@+id/registerPhoneNumber_editText_user"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/phonenumber_entry"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPostcode_editText_user" />

    <Button
        android:id="@+id/admin_cancelNewProductUpdate_Button_user"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="75dp"
        android:text="@string/cancel_userinfo_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/admin_DeleteUser_Button_user"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/admin_delete_button"
        app:layout_constraintBottom_toBottomOf="@+id/admin_cancelNewProductUpdate_Button_user"
        app:layout_constraintEnd_toStartOf="@+id/admin_UpdateProduct_Button_user"
        app:layout_constraintStart_toEndOf="@+id/admin_cancelNewProductUpdate_Button_user" />

    <Button
        android:id="@+id/admin_UpdateProduct_Button_user"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:text="@string/admin_updateitem_text"
        app:layout_constraintBottom_toBottomOf="@+id/admin_DeleteUser_Button_user"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>