<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.shop.ShopFragment">

    <TextView
        android:id="@+id/editCat_Title_Text"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/admin_category_title"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_category_hint"
        app:layout_constraintBottom_toTopOf="@+id/editCat_Spinner"
        app:layout_constraintEnd_toEndOf="@+id/editCat_Spinner"
        app:layout_constraintStart_toStartOf="@+id/editCat_Spinner" />

    <Spinner
        android:id="@+id/editCat_Spinner"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCat_Title_Text" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/name_entry"
        app:layout_constraintEnd_toEndOf="@+id/editCat_NameEntry"
        app:layout_constraintStart_toStartOf="@+id/editCat_NameEntry"
        app:layout_constraintTop_toBottomOf="@+id/editCat_Spinner" />

    <EditText
        android:id="@+id/editCat_NameEntry"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/name_entry"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView32" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/admin_description_hint"
        app:layout_constraintEnd_toEndOf="@+id/editCat_DescEntry"
        app:layout_constraintStart_toStartOf="@+id/editCat_DescEntry"
        app:layout_constraintTop_toBottomOf="@+id/editCat_NameEntry" />

    <EditText
        android:id="@+id/editCat_DescEntry"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/admin_description_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

    <Button
        android:id="@+id/editCat_Back_Button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="75dp"
        android:text="@string/admin_category_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/editCat_Update_Button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/admin_updateitem_text"
        app:layout_constraintBottom_toBottomOf="@+id/editCat_Back_Button"
        app:layout_constraintEnd_toStartOf="@+id/editCat_Delete_Button"
        app:layout_constraintStart_toEndOf="@+id/editCat_Back_Button" />

    <Button
        android:id="@+id/editCat_Delete_Button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:text="@string/admin_delete_button"
        app:layout_constraintBottom_toBottomOf="@+id/editCat_Update_Button"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/editCat_New_Button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:text="@string/admin_newitem_text"
        app:layout_constraintBottom_toTopOf="@+id/editCat_Update_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>