<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_hint"
        app:layout_constraintBottom_toTopOf="@+id/admin_productnameupdate_entry"
        app:layout_constraintEnd_toEndOf="@+id/admin_productnameupdate_entry"
        app:layout_constraintStart_toStartOf="@+id/admin_productnameupdate_entry" />

    <TextView
        android:id="@+id/admin_updateItemTitle_textView"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/admin_newitem_text"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_description_hint"
        app:layout_constraintEnd_toEndOf="@+id/admin_productDescriptionUpdate_entry"
        app:layout_constraintStart_toStartOf="@+id/admin_productDescriptionUpdate_entry"
        app:layout_constraintTop_toBottomOf="@+id/admin_productnameupdate_entry" />

    <EditText
        android:id="@+id/admin_productnameupdate_entry"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/name_entry"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_updateItemTitle_textView" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_price_hint"
        app:layout_constraintEnd_toEndOf="@+id/admin_productPriceUpdate_Entry"
        app:layout_constraintStart_toStartOf="@+id/admin_productPriceUpdate_Entry"
        app:layout_constraintTop_toBottomOf="@+id/admin_productDescriptionUpdate_entry" />

    <EditText
        android:id="@+id/admin_productDescriptionUpdate_entry"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:autoText="true"
        android:ellipsize="none"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/admin_description_hint"
        android:inputType="textLongMessage|textMultiLine|text"
        android:singleLine="false"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_category_hint"
        app:layout_constraintEnd_toEndOf="@+id/admin_newItemUpdate_Spinner"
        app:layout_constraintStart_toStartOf="@+id/admin_newItemUpdate_Spinner"
        app:layout_constraintTop_toBottomOf="@+id/admin_productPriceUpdate_Entry" />

    <EditText
        android:id="@+id/admin_productPriceUpdate_Entry"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/admin_price_hint"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <Spinner
        android:id="@+id/admin_newItemUpdate_Spinner"
        android:layout_width="250dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <Button
        android:id="@+id/admin_cancelNewProductUpdate_Button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="75dp"
        android:text="@string/cancel_userinfo_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/admin_createProduct_Button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:text="@string/admin_create_button"
        app:layout_constraintBottom_toBottomOf="@+id/admin_cancelNewProductUpdate_Button"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>