<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_mobile_navigation"
    app:startDestination="@+id/navigation_admin_shop">
    <fragment
        android:id="@+id/navigation_admin_shop"
        android:name="com.example.mobileappas2.admin_ui.shop.AdminShopFragment"
        android:label="@string/admin_navbar_1"
        tools:layout="@layout/admin_fragment_shop" />

    <fragment
        android:id="@+id/navigation_admin_user"
        android:name="com.example.mobileappas2.admin_ui.user.AdminUserFragment"
        android:label="@string/admin_navbar_2"
        tools:layout="@layout/admin_fragment_users" />

    <fragment
        android:id="@+id/navigation_admin_order"
        android:name="com.example.mobileappas2.admin_ui.user.order.AdminOrderFragment"
        android:label="@string/admin_navbar_3"
        tools:layout="@layout/admin_fragment_orders" />

    <fragment
        android:id="@+id/navigation_admin_new_product"
        android:name="com.example.mobileappas2.admin_ui.shop.newproduct.NewProductFragment"
        android:label="@string/admin_navbar_1"
        tools:layout="@layout/admin_fragment_newproduct" />

    <fragment
        android:id="@+id/navigation_admin_edit_product"
        android:name="com.example.mobileappas2.admin_ui.shop.editProduct.EditProductFragment"
        android:label="@string/admin_navbar_1"
        tools:layout="@layout/admin_fragment_updateproduct" />
    <fragment
        android:id="@+id/navigation_admin_edit_user"
        android:name="com.example.mobileappas2.admin_ui.user.edituser.AdminEditUserFragment"
        android:label="@string/admin_navbar_1"
        tools:layout="@layout/admin_fragment_edituser" />

    <fragment
        android:id="@+id/navigation_admin_edit_category"
        android:name="com.example.mobileappas2.admin_ui.category.EditCategoryFragment"
        android:label="@string/admin_navbar_4"
        tools:layout="@layout/admin_fragment_editcategory" />
</navigation>