<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_entry"
        app:layout_constraintEnd_toEndOf="@+id/registerName_editText"
        app:layout_constraintStart_toStartOf="@+id/registerName_editText"
        app:layout_constraintTop_toBottomOf="@+id/registerTitle_textView" />

    <TextView
        android:id="@+id/registerTitle_textView"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/register_Title"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_entry"
        app:layout_constraintEnd_toEndOf="@+id/registerPassword_editText"
        app:layout_constraintStart_toStartOf="@+id/registerPassword_editText"
        app:layout_constraintTop_toBottomOf="@+id/registerName_editText" />

    <EditText
        android:id="@+id/registerName_editText"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/name_entry"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/re_password_entry"
        app:layout_constraintEnd_toEndOf="@+id/registerRePassword_editText"
        app:layout_constraintStart_toStartOf="@+id/registerRePassword_editText"
        app:layout_constraintTop_toBottomOf="@+id/registerPassword_editText" />

    <EditText
        android:id="@+id/registerPassword_editText"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/password_entry"
        android:inputType="textPersonName|textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_entry"
        app:layout_constraintEnd_toEndOf="@+id/registerEmail_editText"
        app:layout_constraintStart_toStartOf="@+id/registerEmail_editText"
        app:layout_constraintTop_toBottomOf="@+id/registerRePassword_editText" />

    <EditText
        android:id="@+id/registerRePassword_editText"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/re_password_entry"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/re_email_entry"
        app:layout_constraintEnd_toEndOf="@+id/registerReEmail_editText"
        app:layout_constraintStart_toStartOf="@+id/registerReEmail_editText"
        app:layout_constraintTop_toBottomOf="@+id/registerEmail_editText" />

    <EditText
        android:id="@+id/registerEmail_editText"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/email_entry"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_entry"
        app:layout_constraintEnd_toEndOf="@+id/registerAddress_editText"
        app:layout_constraintStart_toStartOf="@+id/registerAddress_editText"
        app:layout_constraintTop_toBottomOf="@+id/registerReEmail_editText" />

    <EditText
        android:id="@+id/registerReEmail_editText"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/re_email_entry"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/postcode_entry"
        app:layout_constraintEnd_toEndOf="@+id/registerPostcode_editText"
        app:layout_constraintStart_toStartOf="@+id/registerPostcode_editText"
        app:layout_constraintTop_toBottomOf="@+id/registerAddress_editText" />

    <EditText
        android:id="@+id/registerAddress_editText"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/address_entry"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phonenumber_entry"
        app:layout_constraintEnd_toEndOf="@+id/registerPhoneNumber_editText"
        app:layout_constraintStart_toStartOf="@+id/registerPhoneNumber_editText"
        app:layout_constraintTop_toBottomOf="@+id/registerPostcode_editText" />

    <EditText
        android:id="@+id/registerPostcode_editText"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/postcode_entry"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/registerPhoneNumber_editText"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/phonenumber_entry"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/registerUser_Button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/register_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancelRegistraction_Button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/cancel_userinfo_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>